Feat: Add contest team post(view) 공모전 팀 모집 게시글(보기) 페이지 추가 Github issue #14

--- a/client/src/forum/css/Contest_Team_ListTab.css
+++ b/client/src/forum/css/Contest_Team_ListTab.css
@@ -27,12 +27,20 @@
 }
 
 .writeButton {
+    width:100%;
+    display:flex;
+    justify-content: flex-end;
+    background: transparent;
+    border: transparent;
+    margin-top: 20px;
+    padding:5px;
+}
+
+.writeButton button {
     border: 1px black solid;
     border-radius:5px;
     background-color:whitesmoke;
-    margin-top: 20px;
-    padding:5px;
-    width:fit-content;
+    padding:2px;
 }
 
 .pageNumber {
@@ -40,5 +48,4 @@
     justify-content: center;
     padding-top: 20px;
     padding-bottom:20px;
-
 }
