--- a/client/src/forum/css/Contest_Team_Write(View).module.css
+++ b/client/src/forum/css/Contest_Team_Write(View).module.css
@@ -1,14 +1,12 @@
 .page {
-    width:75%;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    width:60%;
+    margin: 30px auto;
 }
 
 /* 제목, 카테고리 */
 .titleAndCategory {
     margin-bottom:20px;
     justify-content: center;
-    width:80%;
 }
 
 /* 제목 */
@@ -64,11 +62,6 @@
     align-items: flex-end;
     width: 20%;
     font: 30px bold black;
-}
-
-/* 본문 */
-.body {
-    width:80%;
 }
 
 /* 채팅하기/지원하기/... 버튼 */
