--- a/client/src/forum/css/Contest_Team_Write(Post).module.css
+++ b/client/src/forum/css/Contest_Team_Write(Post).module.css
@@ -120,17 +120,73 @@
 
 /* 작성, 취소 버튼 */
 .submitCancel {
-    width:30%;
+    width:100%;
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom:30px;
 }
 .submitCancel button {
     border: 1px black solid;
     padding: 5px 30px;
+    margin: 0 50px;
 }
 .submit {
     background-color: lightblue;
 }
 
+/* 공모전 글쓰기 - 요약 */
+.bigTitle {
+    font-size:30px;
+    font-weight: bold;
+    width:100%;
+    border-bottom: 2px black solid;
+    margin: 30px auto;
+}
+.brief {
+    width:100%;
+    height:calc(100vw*0.15);
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    margin-bottom:30px;
+}
+    .brief .image {
+        border:2px black solid;
+        min-width:30%;
+        max-width:50%;
+        min-height: 100%;
+        padding:20px;
+        margin-right:60px;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+    }
+        .brief .image button {
+            border: 1px black solid;
+            border-radius: 5px;
+            background:lightgray;
+            padding:5px;
+        }
+        .brief .image svg {
+            width:fit-content;
+        }
 
+    .info {
+        display:flex;
+        width:30%;
+        flex-direction: column;
+    }
+        .inputMust {
+            margin-top:20px;
+        }
+        .briefLabels {
+            margin: 10px 0;
+            display:flex;
+            justify-content: space-between;
+        }
+        .briefLabels label {
+            margin-right: 10px;
+        }
+        .briefLabels input {
+            border: 1px black solid;
+        }
