--- a/client/src/forum/css/ListPage.module.css
+++ b/client/src/forum/css/ListPage.module.css
@@ -1,27 +1,38 @@
-.ForumPage {
+.Page {
     width: 75%;
     margin: 0 auto;
 }
 
+.smallPage {
+    display:flex;
+    flex-direction: column;
+    margin-top:20px;
+}
+.smallTitle {
+    font-size:20px;
+    font-weight:bold;
+    margin-bottom:10px;
+}
+
 /* Search.js */
-.Search {
+.SearchInput {
     position: relative;
     width: 100%;
-    padding-top:30px;
     padding-bottom: 30px;
 }
 
-.Search input {
+.SearchInput input {
     width: 100%;
     height: 35px;
+    padding-left:10px;
     padding-right: 30px;
     border: 2px solid black;
     border-radius: 5px;
 }
 
-.Search img {
+.SearchInput img {
     position: absolute;
-    top: 47px;
+    top: 17px;
     right: 5px;
     width:25px;
     transform: translateY(-50%);
@@ -34,14 +45,9 @@
     width: 100%;
 }
 
-.Category .title {
-    font-weight: bold;
-    margin-bottom: 5px;
-}
-
-.Category .criteria {
+.criteria {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width:100%;
     border: 2px solid black;
     padding: 5px;
@@ -49,36 +55,41 @@
     background-color: lightblue;
 }
 
-.Category .criteria .checkbox {
-    padding-right: 30px;
-}
-
-.Category .criteria label {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
+.checkbox {
     margin-right: 10px;
-    margin-bottom: 20px;
+    display:flex;
+    flex-direction: row;
 }
 
-.Category .criteria .buttons {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    margin-right:10px;
-    margin-bottom: 10px;
+.checkbox label {
+    font-size:17px;
+    font-weight: bold;
+    display: flex;
+    margin:20px;
+}
+.checkbox .checkList {
+    display:flex;
+    align-items: center;
+    margin-right: 30px;
+}
+.checkbox .checkList input {
+    margin-right: 10px;
 }
 
-.Category .criteria .buttons button {
+.buttons {
+    display:flex;
+    justify-content: flex-end;
+}
+.buttons button {
     border: 1px black solid;
-    border-radius:5px;
-    background-color:whitesmoke;
+    border-radius: 5px;
+    margin-right: 20px;
     padding:5px;
-    margin-left: 10px;
 }
+
 
 /* forumList.js */
-.writeList {
+.forumWriteList {
     margin-top: 30px;
     width: 100%;
     border: 2px black solid;
@@ -88,7 +99,8 @@
     justify-content: space-between;
 }
 
-.write {
+
+.forumWrite {
     width: 30%;
     text-align: center;
     box-sizing: border-box;
@@ -96,32 +108,36 @@
     position:relative;
 }
 
-.write img {
-    width: 80%;
-    height: 200px;
-    margin: 0 auto;
-    display: block;
-    border: 1px solid black;
-    object-fit:fill;
+.forumWrite label {
+    font-size:15px;
+    font-weight:bold;
+}
+
+/* projectList.js */
+.projectWriteList {
+    margin-top: 30px;
+    width: 100%;
+    border: 2px black solid;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+}
+.row {
+    width:100%;
+    padding: 10px;
 }
 
 .writeButton {
+    display:flex;
+    width:100%;
+    justify-content: flex-end;
+    margin-top: 20px;
+
+}
+.writeButton button {
     border: 1px black solid;
     border-radius:5px;
     background-color:whitesmoke;
-    margin-top: 20px;
     padding:5px;
-    width:fit-content;
 }
 
-.pageNumber {
-    display: flex;
-    justify-content: center;
-    padding-bottom:20px;
-
-}
-
-.pageNumber button {
-    padding-left:5px;
-    padding-right:5px;
-}
