--- a/client/src/forum/css/ListPage.module.css
+++ b/client/src/forum/css/ListPage.module.css
@@ -60,7 +60,9 @@
     display:flex;
     flex-direction: row;
 }
-
+.checkListTitle {
+    width:10%;
+}
 .checkbox label {
     font-size:17px;
     font-weight: bold;
