Feat: Team write(post) interlock 팀원모집 게시글 작성 페이지 연동 Github issue #18

--- a/client/src/forum/css/List.module.css
+++ b/client/src/forum/css/List.module.css
@@ -39,7 +39,7 @@
     max-width: 30px;
 }
 
-/* List_Category.js */
+/* List_Forum_Category.js */
 .Category {
     position: relative;
     width: 100%;
