--- a/client/src/forum/css/Team_Write(Post).module.css
+++ b/client/src/forum/css/Team_Write(Post).module.css
@@ -144,7 +144,7 @@
 }
 .brief {
     width:100%;
-    height:calc(100vw*0.15);
+    height:auto;
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -175,6 +175,8 @@
         display:flex;
         width:30%;
         flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
     }
         .inputMust {
             margin-top:20px;
@@ -182,6 +184,7 @@
         .briefLabels {
             margin: 10px 0;
             display:flex;
+            flex-direction: column;
             justify-content: space-between;
         }
         .briefLabels label {
