--- a/client/src/forum/css/Team_Write(Post).module.css
+++ b/client/src/forum/css/Team_Write(Post).module.css
@@ -7,6 +7,7 @@
 .title {
     display:flex;
     flex-direction: column;
+    justify-content: space-between;
     margin-top:30px;
     margin-bottom: 20px;
 }
@@ -17,16 +18,12 @@
 .titleInput {
     border: 1px black solid;
     border-radius: 5px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 5px;
+    width:100%;
+    margin-left:0;
+    margin-bottom: 0;
 }
 
 /* 모집 카테고리 선택 */
-.title {
-    font: 20px bold;
-    margin-bottom: 20px;
-}
 .criteria {
     border: 2px black solid;
     border-radius: 5px;
@@ -81,6 +78,50 @@
 }
 .unchecked input[type="number"] {
     background-color: transparent;
+}
+
+/* 팀원 모집글 */
+.categoryDropdown {
+
+}
+.categoryDropdown select {
+    width: 20%;
+    white-space: nowrap;
+}
+.criteria button {
+    padding:3px;
+    border:1px black solid;
+    border-radius: 5px;
+}
+.selectedBox {
+    margin-bottom:10px;
+}
+.selectedBox label {
+    font:20px black bold;
+}
+
+.selectedRow {
+    display:flex;
+    flex-direction: row;
+}
+.selectedRow label {
+    display:flex;
+    font:17px black bold;
+    padding-right: 10px;
+    margin-bottom:20px;
+    align-items: center;
+}
+.selectedRow button {
+    display:flex;
+    align-items: center;
+    margin-left:10px;
+    margin-bottom:20px;
+}
+.selectedRow .l1 {
+    width:20%;
+}
+.selectedRow .l2 {
+    width:20%;
 }
 
 /* 작성 본문 */
