Feat: Add project post edit 프로젝트 게시글 수정/삭제기능 추가 Github issue #18

--- a/client/src/forum/css/Team_Write(Post).module.css
+++ b/client/src/forum/css/Team_Write(Post).module.css
@@ -80,6 +80,20 @@
     background-color: transparent;
 }
 
+th {
+    padding: 5px 30px;
+    text-align: center;
+}
+tbody tr {
+    border:1px black solid;
+}
+td {
+    padding:10px;
+    text-align: center;
+}
+td select {
+    margin:0px;
+}
 /* 팀원 모집글 */
 .categoryDropdown {
 
@@ -173,6 +187,12 @@
 }
 .submit {
     background-color: lightblue;
+}
+.remove {
+    border: 2px red solid;
+    padding: 5px 10px;
+    background: #FA6161FF;
+    margin-left: 20px;
 }
 
 /* 공모전 글쓰기 - 요약 */
