--- a/client/src/chat/ChatListPage.module.css
+++ b/client/src/chat/ChatListPage.module.css
@@ -1,15 +1,13 @@
 
 .page {
-    display:flex;
-    flex-direction: column;
-    margin: 30px;
-    width:75%;
+    margin-top:30px;
+    margin-bottom:30px;
+    width:100%;
 }
 
 .bigTitle {
     font: 40px black bold;
     width:100%;
-    padding-bottom: 10px;
     border-bottom: 2px black solid;
 }
 
@@ -20,8 +18,6 @@
     display:flex;
     flex-direction: row;
     margin: 30px auto;
-    padding-bottom: 20px;
-    border-bottom: 1px black solid;
 }
 .chatLine img {
     width: 100px;
@@ -34,6 +30,5 @@
     justify-content: center;
 }
 .nameNchat label {
-    margin-top:5px;
-    margin-bottom:5px;
+    margin: 5px auto;
 }
