--- a/client/src/signup/GenderInput.css
+++ b/client/src/signup/GenderInput.css
@@ -6,3 +6,9 @@
 #genderBox label{
     margin-left: 8px;
 }
+#genderBox select{
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 3px 4px;
+    margin: 0 20px 20px 20px;
+}
