--- a/client/src/adminpage/ReportList.css
+++ b/client/src/adminpage/ReportList.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-around;
     margin: 70px auto 0 auto;
-    padding: 8px 10px 8px 10px;
+    padding: 8px 0 8px 20px;
     border-top: 2px solid black;
     border-bottom: 2px solid black;
 }
