--- a/client/src/forum/css/List.module.css
+++ b/client/src/forum/css/List.module.css
@@ -31,6 +31,10 @@
     border-radius: 5px;
     margin:0;
 }
+.SearchInput input[type="text"]:focus {
+    border:2px #1d5dd9 solid;
+    outline:none;
+}
 
 .SearchInput img {
     position: absolute;
@@ -47,7 +51,7 @@
     width: 100%;
 }
 .categoryTable .tableTitle {
-    width:10%;
+    min-width:10%;
     font-weight: bold;
 }
 .categoryTable tr {
