--- a/client/src/forum/css/List_PageNumber.module.css
+++ b/client/src/forum/css/List_PageNumber.module.css
@@ -9,4 +9,10 @@
     padding-left:5px;
     padding-right:5px;
     margin: 0 15px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.pageNumber button:hover {
+    transform:scale(1.2);
+    color: #1d5dd9;
 }
