--- a/client/src/forum/css/Team_Write(Post).module.css
+++ b/client/src/forum/css/Team_Write(Post).module.css
@@ -79,7 +79,7 @@
 .unchecked input[type="number"] {
     background-color: transparent;
 }
-
+/*
 th {
     padding: 5px 30px;
     text-align: center;
@@ -94,6 +94,8 @@ td {
 td select {
     margin:0px;
 }
+*/
+
 /* 팀원 모집글 */
 .categoryDropdown {
 
@@ -211,16 +213,17 @@ td select {
     justify-content: flex-start;
     margin-bottom:30px;
 }
+    .brief .imageUpload {
+        max-width:30%;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-right:60px;
+    }
     .brief .image {
         border:2px black solid;
-        min-width:30%;
-        max-width:50%;
-        min-height: 100%;
-        padding:20px;
-        margin-right:60px;
-        display:flex;
-        justify-content: center;
-        align-items: center;
+        object-fit: contain;
+        margin-bottom:10px;
     }
         .brief .image button {
             border: 1px black solid;
@@ -231,14 +234,20 @@ td select {
         .brief .image svg {
             width:fit-content;
         }
+        .imageUpload input {
+            margin:0;
+        }
 
     .info {
         display:flex;
         width:30%;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: flex-start;
+        justify-content: center;
     }
+        .info input {
+            margin: 20px 0;
+        }
         .inputMust {
             margin-top:20px;
         }
