Design: Overall CSS 전반적인 디자인 통일

--- a/client/src/chat/ChatPage.module.css
+++ b/client/src/chat/ChatPage.module.css
@@ -44,6 +44,7 @@
 
 .chatLog {
     min-height:200px;
+    overflow-y: auto;
     border:2px black solid;
     border-bottom-right-radius: 20px;
     background-color: rgba(168, 219, 255, 0.6);
