--- a/client/src/forum/css/Team_Write(View).module.css
+++ b/client/src/forum/css/Team_Write(View).module.css
@@ -1,6 +1,7 @@
 .page {
     width:60%;
     margin: 30px auto;
+    font-family: 'NotoSansKR';
 }
 
 /* 제목, 카테고리 */
@@ -26,6 +27,7 @@
 .title .T {
     width:75%;
     font-size: 30px;
+    font-weight: bold;
 }
 .title .W {
     width:10%;
@@ -41,25 +43,34 @@
     width:100%;
     padding-left: 10px;
     border-bottom: 2px black solid;
-    display: flex;
-    flex-direction: column;
 }
-.category .row {
+.categoryTable {
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.categoryTitle {
+    width:200px;
+    font-size:20px;
+    font-weight: bold;
+}
+.categoryTable tr {
     display:flex;
     flex-direction: row;
-    width:100%;
-    margin-right: 30px;
-    align-items: center;
-    border-bottom: 1px black solid;
     margin-bottom: 20px;
 }
-.row .categoryTitle {
-    display: flex;
-    align-items: flex-end;
-    width: 20%;
-    font: 20px bold black;
+.categoryTable td {
+    padding:10px;
+    margin-right: 30px;
 }
 
+
+.categoryCheckApproved {
+    position: absolute;
+    top:200px;
+    left:1100px;
+}
 
 
 /* 본문 */
@@ -87,28 +98,12 @@
     justify-content: flex-end;
 }
 
-/* 버튼 */
-.redButton {
-    border: 2px red solid;
-    padding: 5px 10px;
-    background: #FA6161FF;
-    margin-left: 20px;
+.buttonLayout {
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom:20px;
 }
-.yellowButton {
-    border: 2px #FAFA80FF solid;
-    background: #FAFAD2FF;
-    padding: 5px 10px;
-    margin-left: 20px;
-}
-.blueButton {
-    border: 2px cornflowerblue solid;
-    background: lightskyblue;
-    padding: 5px 10px;
-    margin-left: 20px;
-}
-.whiteButton {
-    border: 2px black solid;
-    background: white;
-    padding: 5px 10px;
-    margin-left:20px;
+.buttonLayout button {
+    margin-left:30px;
 }
