--- a/client/src/forum/css/modal.module.css
+++ b/client/src/forum/css/modal.module.css
@@ -8,8 +8,18 @@
     left:50%;
     transform: translate(-50%, -50%);
     background-color: white;
+
+    display:flex;
+    flex-direction: column;
+    padding:30px;
 }
 
 .specialTd {
     border:1px black solid;
+}
+
+.modalTitle {
+    font-size:20px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
