Merge: Resolve conflict

--- a/client/src/forum/css/Team_Write(Post).module.css
+++ b/client/src/forum/css/Team_Write(Post).module.css
@@ -1,7 +1,6 @@
 .page {
     width:60%;
     margin: 0 auto;
-    font-family: "NotoSansKR";
 }
 
 /* 제목 작성 */
@@ -21,27 +20,17 @@
     border-radius: 5px;
     width:100%;
     margin-left:0;
-    margin-bottom: 30px;
-    padding: 10px;
-}
-.titleInput input:focus {
-    border: 2px #5087f5 solid;
+    margin-bottom: 0;
 }
 
 /* 모집 카테고리 선택 */
-.category {
-    margin-bottom: 30px;
-}
 .criteria {
-    display: flex;
+    border: 2px black solid;
+    border-radius: 5px;
+    background-color: lightblue;
+    display:flex;
     flex-direction: column;
-    width:100%;
-    border: 2px solid black;
     padding: 10px;
-    /*border-top-left-radius: 12px;*/
-    border-bottom-right-radius: 20px;
-    background-color: rgba(168, 219, 255, 0.6);
-    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
     margin-bottom: 30px;
 }
 .row {
@@ -91,22 +80,33 @@
     background-color: transparent;
 }
 
+/*th {*/
+/*    padding: 5px 30px;*/
+/*    text-align: center;*/
+/*}*/
+/*tbody tr {*/
+/*    border:1px black solid;*/
+/*}*/
+/*td {*/
+/*    padding:10px;*/
+/*    text-align: center;*/
+/*}*/
+/*td select {*/
+/*    margin:0px;*/
+/*}*/
 /* 팀원 모집글 */
 .categoryDropdown {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
+
 }
 .categoryDropdown select {
-    padding:5px;
     width: 20%;
     white-space: nowrap;
-    margin-right: 30px;
 }
-
-
+.criteria button {
+    padding:3px;
+    border:1px black solid;
+    border-radius: 5px;
+}
 .selectedBox {
     margin-bottom:10px;
 }
@@ -118,17 +118,24 @@
     display:flex;
     flex-direction: row;
 }
-.selectedRow td {
+.selectedRow label {
     display:flex;
     font:17px black bold;
     padding-right: 10px;
-    width: 15%;
     margin-bottom:20px;
     align-items: center;
 }
 .selectedRow button {
     display:flex;
     align-items: center;
+    margin-left:10px;
+    margin-bottom:20px;
+}
+.selectedRow .l1 {
+    width:20%;
+}
+.selectedRow .l2 {
+    width:20%;
 }
 
 /* 작성 본문 */
@@ -147,15 +154,15 @@
 /* 리워드 버튼 */
 .reward {
     display:flex;
-    margin: 20px;
-    padding:5px;
-}
 
+    width:fit-content;
+    border: 1px black solid;
+    background-color: lightgray;
+    margin: 20px auto;
+    padding:10px;
+}
 .reward input {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 30px 0 0;
+    margin-right: 40px;
 }
 .reward .description {
     display:flex;
@@ -174,10 +181,19 @@
     margin-bottom:30px;
 }
 .submitCancel button {
-    padding: 10px 20px;
-    margin: 20px 40px;
+    border: 1px black solid;
+    padding: 5px 30px;
+    margin: 0 50px;
 }
-
+.submit {
+    background-color: lightblue;
+}
+.remove {
+    border: 2px red solid;
+    padding: 5px 10px;
+    background: #FA6161FF;
+    margin-left: 20px;
+}
 
 /* 공모전 글쓰기 - 요약 */
 .bigTitle {
@@ -188,28 +204,23 @@
     margin: 30px auto;
 }
 .brief {
+    width:100%;
+    height:auto;
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
-    margin-bottom:20px;
+    margin-bottom:30px;
 }
-    .brief .imageUpload {
-        max-width:40%;
-        min-width:300px;
-        min-height:350px;
+    .brief .image {
+        border:2px black solid;
+        min-width:30%;
+        max-width:50%;
+        min-height: 100%;
+        padding:20px;
         margin-right:60px;
         display:flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-    .brief .image {
-        object-fit: contain;
-        max-width:40%;
-        min-width:300px;
-        min-height:350px;
-        border: 2px black solid;
-        margin-bottom:10px;
     }
         .brief .image button {
             border: 1px black solid;
@@ -217,45 +228,29 @@
             background:lightgray;
             padding:5px;
         }
-        .imageUpload input[type="text"] {
-            margin:0;
+        .brief .image svg {
+            width:fit-content;
         }
 
     .info {
         display:flex;
-        width:40%;
+        width:30%;
         flex-direction: column;
         align-items: flex-start;
-        justify-content: center;
+        justify-content: flex-start;
     }
-
-        .info input {
-            margin-bottom:20px;
+        .inputMust {
+            margin-top:20px;
         }
-        .briefTable {
+        .briefLabels {
+            margin: 10px 0;
             display:flex;
             flex-direction: column;
+            justify-content: space-between;
         }
-        .briefTable tr {
-            margin-bottom:30px;
+        .briefLabels label {
+            margin-right: 10px;
         }
-        .dropdownTitle {
-            font-weight:bold;
-            padding-right:30px;
+        .briefLabels input {
+            border: 1px black solid;
         }
-        .dropDown {
-            display:flex;
-            border:1px black solid;
-            border-radius: 8px;
-        }
-        .datePick input {
-            margin:0;
-        }
-
-.table {
-
-}
-.table td {
-    text-align: center;
-    padding:10px 0;
-}
