--- a/client/src/signup/EducationInput.css
+++ b/client/src/signup/EducationInput.css
@@ -2,5 +2,5 @@
     border: 1px solid gray;
     border-radius: 5px;
     padding: 3px 4px;
-    margin: 0 20px 20px 20px;
+    margin: 0 0 20px 0;
 }
