Fix: Resolve conflict

--- a/client/src/forum/css/List.module.css
+++ b/client/src/forum/css/List.module.css
@@ -127,7 +127,7 @@
     border-radius: 5px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 .noPost {
