--- a/client/src/forum/css/List.module.css
+++ b/client/src/forum/css/List.module.css
@@ -17,19 +17,22 @@
 
 /* List_Search.js */
 .SearchInput {
-    position: relative;
+    display:flex;
+    flex-direction: row;
     width: 100%;
     padding-bottom: 30px;
 }
 
 .SearchInput input {
-    width: 100%;
+    width: 93%;
     height: 35px;
     padding-left:10px;
     padding-right: 30px;
+
     border: 2px solid black;
     border-radius: 5px;
     margin:0;
+    margin-right: 20px;
 }
 .SearchInput input[type="text"]:focus {
     border:2px #1d5dd9 solid;
